# vibeshine

./: .eslint-fixes.json  .eslintignore  .eslintrc.cjs  .gitmodules  .prettierignore  CMakeLists.txt  README.md  package.json  sunshine_state.json  tailwind.config.js  tsconfig.base.json  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
cmake/compile_definitions/: common.cmake  windows.cmake
cmake/packaging/: windows.cmake
cmake/prep/: build_version.cmake
cmake/targets/: common.cmake  windows.cmake
docs/: Doxyfile  api.js  api.md  api.ts  configuration.md  configuration.ts  contributing.md  getting_started.md
gh-pages-template/: index.html
plugins/playnite/SunshinePlaynite/: SunshinePlaynite.psm1  extension.yaml  main.ps1
src/: config.cpp  config.h  config_playnite.cpp  config_playnite.h  confighttp.cpp  confighttp.h  confighttp_playnite.cpp  http_auth.cpp  http_auth.h  httpcommon.cpp  httpcommon.h  logging.cpp  logging.h  main.cpp  nvhttp.cpp  process.cpp  process.h  rtsp.cpp  runtime_config.cpp  runtime_config.h  stream.cpp  sunshine.code-workspace  system_tray.cpp  system_tray.h  video.cpp
src/platform/windows/: display_base.cpp  display_vram.cpp  display_wgc.cpp  image_convert.cpp  image_convert.h  misc.cpp  misc.h  playnite_frontend_helpers.h  playnite_integration.cpp  playnite_integration.h  playnite_ipc.cpp  playnite_ipc.h  playnite_protocol.cpp  playnite_protocol.h  playnite_sync.cpp  playnite_sync.h
src_assets/linux/assets/: apps.json
src_assets/macos/assets/: apps.json
src_assets/sample/: package.json
src_assets/sunshine_frontend/: index.html  jest.config.js  package.json  tsconfig.json  vite.config.ts
src_assets/sunshine_frontend/src/: App.vue  main.ts
src_assets/types/: index.d.ts
tests/: test_config_playnite.cpp  test_playnite_autosync_reconcile.cpp  test_playnite_protocol.cpp  test_playnite_sync.cpp  test_playnite_sync_autosync.cpp
tests/frontend/: checkbox.test.ts  navbar.test.ts  setup.ts
tests/unit/: test_confighttp.cpp  test_http_auth.cpp
tools/: CMakeLists.txt  ddprobe.cpp  playnite_launcher.cpp
(+155 files in other folders)
